--- a/src/App.css
+++ b/src/App.css
@@ -217,7 +217,7 @@ p span {
   text-align: center;
   font-size: 12.8px;
   letter-spacing: 1px;
-  padding: 30px 0 0 0;
+  padding: 30px 0 0px 0;
   /* margin: auto;
   padding: 20px;
   font-size: small;
@@ -477,12 +477,12 @@ flex: 1;
   justify-content: center;
   display: flex;
   flex-direction: column;
-  padding-bottom: 10%;
-  margin: 0 10%;
+  /* padding-bottom: 10%; */
+  /* margin: 0 10%; */
 }
 
 .contact-header {
-  margin-top: 5rem;
+  margin-top: 6rem;
   font-weight: 800;
   /* z-index: 100; */
   display: flex;
@@ -1613,6 +1613,69 @@ body {
     width: 100%;
     display: block;
 }*/
+.line0 {
+  height: 0rem;
+  background-color: var(--color-bg);
+  border-top: 1px solid #80e2ff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 30px 0px 50px;
+  height: .5rem;
+  margin-top: 6rem;
+  /* margin-top: 0.1px; */
+  /* height: 6rem; */
+  /* flex-direction: row; */
+  /* margin: 0px 60px 0 60px; */
+}
+.line1 {
+  height: 0rem;
+  background-color: var(--color-bg);
+  border-top: 1px solid #80e2ff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 30px 0px 50px;
+  margin: 0px 20px 0 20px;
+  height: .5rem;
+}
+.line2 {
+  height: 0rem;
+  background-color: var(--color-bg);
+  border-top: 1px solid #80e2ff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 30px 0px 50px;
+  margin: 0px 40px 0 40px;
+  height: .5rem;
+}
+.line3 {
+  height: 0rem;
+  background-color: var(--color-bg);
+  border-top: 1px solid #80e2ff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 30px 0px 50px;
+  margin: 0px 60px 0 60px;
+  height: .5rem;
+}
+.line4 {
+  height: 0rem;
+  background-color: var(--color-bg);
+  border-top: 1px solid #80e2ff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 30px 0px 50px;
+  height: .5rem;
+}
 
 
 
@@ -1637,12 +1700,28 @@ body {
     padding: 0px;
 }
 
+
   .project-links {
-    gap: 1rem;
+    z-index: 10;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    gap: 4rem;
+    margin-top: 1rem;
+    font-size: 14px;
+    /* gap: 1rem; */
   }
   .project-links a {
+    margin-bottom: 5%;
+    color: var(--color-text);
+    background: #ce47b3;
     padding: 5px 9px;
+    text-decoration: none;
+    border-radius: 15px;
+    transition: background-color .3s;
+    /* padding: 5px 9px; */
   }
+
 
   .about-container {
     margin: 30px 20px;
@@ -1752,12 +1831,26 @@ body {
 
 
   .contact-info {
+    z-index: 100;
+    /* width: 100%; */
     display: flex;
     flex-direction: column;
-    /* padding: 0 5%; */
+    font-size: 1.1rem;
+    padding: 0 5%;
+    text-align: center;
+    justify-content: center;
+    margin: 10px 30px;
+    gap: 0;
+
+
+    /* display: flex;
+    flex-direction: column;
     text-align: center;
     margin: 0px 0px;
-    gap: 4px;
+    gap: 4px; */
+
+
+    /* padding: 0 5%; */
     /* padding: 0; */
     /* flex: 1; */
     /* margin: 30px 30px 30px 0; */
@@ -2157,8 +2250,61 @@ body {
 
   .line {
     margin-top: 5rem;
-    height: 2rem;
+    height: .5rem;
   }
+  .line1 {
+    height: 0rem;
+    background-color: var(--color-bg);
+    border-top: 1px solid #80e2ff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 30px 0px 50px;
+    margin: 0px 20px 0 20px;
+    height: .5rem;
+  }
+  .line2 {
+    height: 0rem;
+    background-color: var(--color-bg);
+    border-top: 1px solid #80e2ff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 30px 0px 50px;
+    margin: 0px 40px 0 40px;
+    height: .5rem;
+  }
+  .line3 {
+    height: 0rem;
+    background-color: var(--color-bg);
+    border-top: 1px solid #80e2ff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 30px 0px 50px;
+    margin: 0px 60px 0 60px;
+    height: .5rem;
+  }
+  .line0 {
+    height: 0rem;
+    background-color: var(--color-bg);
+    border-top: 1px solid #80e2ff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 30px 0px 50px;
+    height: .5rem;
+    /* margin-top: 4rem; */
+    /* margin-top: 0.1px; */
+    /* height: 6rem; */
+    /* flex-direction: row; */
+    /* margin: 0px 60px 0 60px; */
+  }
+
 
   .contact-image-flex {
     padding: 0px 20px 0px 0px;
@@ -2208,6 +2354,11 @@ body {
     margin: 10px 30px;
     gap: 0;
   }
+
+  .contact-header {
+    margin-top: 1rem;
+  }
+  
   .contact-header h1 {
     font-weight: 600;
     font-size: 28px;
@@ -2438,6 +2589,10 @@ body {
     white-space: nowrap;
     border: 1px solid transparent;
 } */
+
+.images-leaning {
+  display: none;
+}
 }
 
 
@@ -2542,7 +2697,7 @@ body {
   min-height: 230px;
   position: relative;
   background-repeat: no-repeat;
-  margin: 10em auto 0em;
+  margin: 20em auto 0em;
   /* background-image: linear-gradient(352deg, transparent 45.2%,
                                             #bbb        45.5%,
                                             #bbb        45.6%,
@@ -2578,7 +2733,7 @@ body {
                                               rgba(255, 255, 255, 0.25) 45%,
                                               rgba(255, 255, 255, 0.23) 55%,
                                               rgba(255, 255, 255, 0.13) 75%),
-                        radial-gradient(ellipse at 50% 100%, rgba(255, 255, 255, 0.15) 3%, transparent 40%);
+                        radial-gradient(ellipse at 50% 100%, rgba(255, 255, 255, 0.15) 25%, transparent 50%);
       transform: rotate(-8deg);
 }
     
